--- a/componentes/curso.html
+++ b/componentes/curso.html
@@ -156,8 +156,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module">
-        import { fetchCursos } from '/services/fetchDatosCursos.js';
-        import { procesarCursos } from '../utils/transformarDatos.js';
+        import { fetchCursos } from '/MindLabEducationCenterPage/services/fetchDatosCursos.js';
+        import { procesarCursos } from '/MindLabEducationCenterPage/utils/transformarDatos.js';
        
 
         document.addEventListener("DOMContentLoaded", async () => {
