--- a/componentes/curso.html
+++ b/componentes/curso.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
             <div class="flex flex-col items-center mt-4">
-                <a href="../index.html"
+                <a href="/MindLabEducationCenterPage/index.html"
                 class="w-40 p-2 cursor-pointer flex items-center justify-center border border-gray-200 bg-[#59899cff] text-white rounded-md shadow-sm transition-all active:translate-y-[2px]">
                     ← <span class="ml-2 text-sm">Volver a la lista</span>
                 </a>
